@@ -1,8 +1,8 @@
 Package: FDboost
 Type: Package
 Title: Boosting Functional Regression Models
-Version: 0.3-1
-Date: 2018-05-10
+Version: 0.3-2
+Date: 2018-08-04
 Authors@R: c(person("Sarah", "Brockhaus", role = c("aut", "cre"),
 		            email = "Sarah.Brockhaus@stat.uni-muenchen.de"), 
 			 person("David", "Ruegamer", role = "aut", 
@@ -17,7 +17,7 @@ Imports: graphics, grDevices, utils, stats, Matrix, gamboostLSS (>=
         2.0-0), stabs, mgcv, MASS, zoo
 Suggests: fda, fields, ggplot2, maps, mapdata, knitr, refund, testthat
 License: GPL-2
-Packaged: 2018-05-10 20:51:50 UTC; Sarah
+Packaged: 2018-08-04 08:55:27 UTC; Sarah
 Collate: 'aaa.R' 'FDboost-package.R' 'FDboost.R' 'baselearners.R'
         'baselearnersX.R' 'bootstrapCIs.R' 'constrainedX.R'
         'crossvalidation.R' 'FDboostLSS.R' 'hmatrix.R' 'methods.R'
@@ -33,4 +33,4 @@ Author: Sarah Brockhaus [aut, cre],
   with contributions by many others (see inst/CONTRIBUTIONS) [ctb]
 Maintainer: Sarah Brockhaus <Sarah.Brockhaus@stat.uni-muenchen.de>
 Repository: CRAN
-Date/Publication: 2018-05-10 21:18:52 UTC
+Date/Publication: 2018-08-04 21:10:11 UTC
