@@ -1,35 +1,35 @@
-0d70cac7830bbf0f54f08bcfc2f50383 *DESCRIPTION
+16f610e358309cf69abda0348a883674 *DESCRIPTION
 fa5d0c4d41de4d32396083490d55cc62 *NAMESPACE
 1b70279e612589e3f7255b7f4d1bb7ad *R/FDboost-package.R
-69500c8f45db11ffdc1020dc3815f6f5 *R/FDboost.R
+338f97f95228fd71e58b30242ddb08ef *R/FDboost.R
 f899653b33ceb3429f70367d88a4fba5 *R/FDboostLSS.R
 16553d107d7d20f5281c577423612606 *R/aaa.R
 5a9f821fd6123a97a78ab3ddf55d64bb *R/baselearners.R
 d4c274d530323874e02681fcc8860918 *R/baselearnersX.R
 a4af69eb87e2533cae0e21c573b58cce *R/bootstrapCIs.R
 974d8476c39f644ec899b32f0419ffb9 *R/constrainedX.R
-0963d4d23a941214825c125baf0a0bc8 *R/crossvalidation.R
+5adc0da671e1ec26a56ebb3673858abf *R/crossvalidation.R
 a754ad31addb9b24a57d1287b6262366 *R/hmatrix.R
 9d3c415fe641cb7a5b7211957f9c4ea0 *R/methods.R
 a4db91fd9582155cfb7567696dcf4d9a *R/stabsel.R
 a1603745e0e23075b5bbb36f1a2c8ce0 *R/utilityFunctions.R
-eefc5e79ce066ba899cb08da7fc3718f *build/vignette.rds
+ba24ece7d72539b4060c84ba13dbcf84 *build/vignette.rds
 591e5c0a686254ccca191ab46ad6e01f *data/datalist
 364d3e92ceaf25a53e649c083626689c *data/emotion.RData
 ee74cf2f148a15581ea12e19cbc623b2 *data/fuelSubset.RData
 84c9f612a77bda07915a80bd106ee0e7 *data/viscosity.RData
 01fc022331a4a4ebc372a194cddffa26 *inst/CITATION
 c1f6f40d3bfa1b56a71d55d40bdbce61 *inst/CONTRIBUTIONS
-d290fd6de73f86a1f63f6db2d712392e *inst/NEWS.Rd
+0eea625d5aa5c0abd6c444f86f464174 *inst/NEWS.Rd
 2ccbb29b4b6d66e3244ea1dacc6c3764 *inst/doc/FLAM_canada.R
 b1eabb628492c849e48748621f6b6b2c *inst/doc/FLAM_canada.Rnw
-138a949a57ef8273e48f33202236e7a1 *inst/doc/FLAM_canada.pdf
+06293855188d8a9887bf8159038410ec *inst/doc/FLAM_canada.pdf
 b6744ccf36db08f83bc65bf58551d461 *inst/doc/FLAM_fuel.R
 5a72cc02a9d2e9ba58ebc2eb6b38d04e *inst/doc/FLAM_fuel.Rnw
-c0d846be0a61b4a5af5a3cfcbb4f94c9 *inst/doc/FLAM_fuel.pdf
+b275e497f87d612d96f7cc3e0c6962cd *inst/doc/FLAM_fuel.pdf
 7f7a592887ec853847cd791cfbbd3682 *inst/doc/FLAM_viscosity.R
 048aff761248b8cc001aa10695a8467e *inst/doc/FLAM_viscosity.Rnw
-d71e0066b079dd1e7ccbbddd93df78b5 *inst/doc/FLAM_viscosity.pdf
+184af742f90044c4b3e5c3592be31e8f *inst/doc/FLAM_viscosity.pdf
 d80e198d81fda0003dbe5cb64619fcba *inst/sim/analyze_results.R
 8efc98c4515d8897bd03ccc7e8d62ace *inst/sim/readme.txt
 266aaa4571309f42c51f740fcc90d52e *inst/sim/run_FDboost.R
@@ -51,7 +51,7 @@ bbf0afcf9827db19a5bdcced8a6d2406 *inst/simHist/run_pffr3.R
 e32459fb97a51656b62250bfb423aab3 *man/FDboost.Rd
 88eefb5433ad9dd121f4e46bbba06631 *man/FDboostLSS.Rd
 2cf7cc4e3bccf2d34b541dde72d0c4db *man/anisotropic_Kronecker.Rd
-5cbe803248cdbda9f701d2f1e18a9097 *man/applyFolds.Rd
+49a854e5d585000e50d20382e7d5a4de *man/applyFolds.Rd
 499b59ae3bc60ee0badd755cc0a70d6e *man/bbsc.Rd
 3eb6677ffc4010040d0d198b1e5e58e2 *man/bhistx.Rd
 64f38429313c8c0f317b5c3c86541be7 *man/bootstrapCI.Rd
@@ -88,7 +88,7 @@ ba4418311486880eaa8b110ee586cf4a *man/update.FDboost.Rd
 c4b09d35a6a9e3502f8510bc551829ae *man/validateFDboost.Rd
 d6ccc9dbabccf38a45dacf9a9056cd05 *man/viscosity.Rd
 e88c0c232f3dee32e437d999ee0858df *man/wide2long.Rd
-203348a5bf41983b07c5b06fb4940076 *tests/general_tests.R
+08f77249ea1a519480493f150f975bef *tests/general_tests.R
 b1eabb628492c849e48748621f6b6b2c *vignettes/FLAM_canada.Rnw
 5a72cc02a9d2e9ba58ebc2eb6b38d04e *vignettes/FLAM_fuel.Rnw
 048aff761248b8cc001aa10695a8467e *vignettes/FLAM_viscosity.Rnw
